--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "werneckbh/qr-code",
+    "name": "innovareti/qr-code",
     "description": "QR Code Generator for PHP",
     "type": "library",
     "license": "MIT",
