--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-repository: werneckbh/qr-code
+repository: innovareti/qr-code
 title: QR Code Generator for PHP
 description: A Standalone package for creating QR Codes in PHP
 show_downloads: true
